# folder-tokenizer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
public/: app.js  index.html  styles.css
src/folder_tokenizer/: __init__.py  app.py  cli.py  processors.py  tokenizer.py
